# Mini-Trading-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_book_snapshot.cpp  bench_execution_gateway.cpp  bench_feed_handler.cpp  bench_matching_engine.cpp  bench_order.cpp  bench_order_book.cpp  bench_pipeline.cpp  bench_position_manager.cpp  bench_price_level.cpp  bench_risk_manager.cpp
include/velox/: book.hpp  feed.hpp  gateway.hpp  matching.hpp  risk.hpp  velox.hpp
include/velox/book/: book_snapshot.hpp  fill.hpp  order_book.hpp  order_book_v1.hpp  order_book_v2.hpp  order_book_v3.hpp  price_level.hpp
include/velox/core/: object_pool.hpp  symbol_engine.hpp
include/velox/feed/: decoder.hpp  feed_handler.hpp
include/velox/gateway/: execution_gateway.hpp  fix_encoder.hpp
include/velox/matching/: matching_engine.hpp  order.hpp
include/velox/risk/: position_manager.hpp  risk_manager.hpp
src/: CMakeLists.txt  main.cpp
src/book/: book_snapshot.cpp  order_book.cpp  price_level.cpp
src/feed/: decoder.cpp  feed_handler.cpp
src/gateway/: execution_gateway.cpp  fix_encoder.cpp
src/matching/: matching_engine.cpp  order.cpp
src/risk/: position_manager.cpp  risk_manager.cpp
tests/: CMakeLists.txt  test_book_snapshot.cpp  test_execution_gateway.cpp  test_feed_handler.cpp  test_integration.cpp  test_main.cpp  test_matching_engine.cpp  test_order.cpp  test_order_book.cpp  test_position_manager.cpp  test_price_level.cpp  test_risk_manager.cpp
tools/: CMakeLists.txt  create_itch.cpp
